<resources>
    <string name="app_name">Projecthair</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profil">Profil</string>
    <!--    home -->
    <string name="content_Hairmen">MEN HAIR RECOMENDATIONS</string>
    <string name="content_Hair">HAIR RECOMENDATIONS</string>
    <string name="content_Hairwmn">WOMEN HAIR RECOMENDATIONS</string>
    <string name="content_Salon">SALON RECOMMENDATIONS</string>
    <string name="seeall">See All</string>
    <string name="Dess_tum">15 Gaya Rambut Ter Baru</string>
    <string name="event_image">Event Image</string>
    <string name="hairmuse_logo">HairMuse Logo</string>

    <!--    camera-->
    <string name="gallery">Galeri</string>
    <string name="camera">Camera</string>
    <string name="result">Hasil Analisis</string>
    <string name="analyze">Analyze</string>
    <string name="Upload">Upload</string>

    <!-- register-->
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="email_invalid">Invalid Email Address</string>
    <string name="pass_invalid">Minimum 8 Character Password</string>
    <string name="required">Harus diisi dulu</string>
    <string name="dont_have_account_yet">Belum memiliki akun?</string>
    <string name="signup_btn_acc">Sign Up</string>
    <string name="title_page">Mari buat akun terlebih dahulu dengan melengkapi data berikut</string>
    <string name="confirm_password">Konfirmasi Password</string>

    <!-- profile-->
    <string name="name">Name</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="email">Alamat Email</string>
    <string name="adress">Alamat</string>
    <string name="change_password">Ubah Password</string>
    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <integer-array name="male_photo">
        <item>@drawable/square_male</item>
        <item>@drawable/round_male</item>
        <item>@drawable/oval_male</item>
        <item>@drawable/oblong_male</item>
        <item>@drawable/heart_male</item>
    </integer-array>
    <string-array name="text_male">
        <item>Square</item>
        <item>Round</item>
        <item>Oval</item>
        <item>Oblong</item>
        <item>Heart</item>
    </string-array>


    <integer-array name="female_photo">
        <item>@drawable/square_female</item>
        <item>@drawable/round_female</item>
        <item>@drawable/oval_female</item>
        <item>@drawable/oblong_female</item>
        <item>@drawable/heart_female</item>
    </integer-array>
    <string-array name="txt_female">
        <item>Square</item>
        <item>Round</item>
        <item>Oval</item>
        <item>Oblong</item>
        <item>Heart</item>
    </string-array>


</resources>